--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "mdashfaque-mamdu-au17 <77242783+mdashfaque-mamdu-au17@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.4"
   },
